--- a/waterbottle.html
+++ b/waterbottle.html
@@ -464,7 +464,7 @@
         <section class="educational-content container">
             <h2 class="section-title">Learn More About Sustainable Hydration</h2>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/watch?v=cKJChcoAjno" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="quiz-container">
                 <h3>Test Your Knowledge</h3>
