--- a/toothbrush.html
+++ b/toothbrush.html
@@ -465,7 +465,7 @@
         <section class="educational-content container">
             <h2 class="section-title">Learn More About Sustainable Oral Care</h2>
             <div class="video-container">
-                <iframe src="https://www.youtube.com/watch?v=GvMlXxO9XtE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                <iframe src="https://youtu.be/GvMlXxO9XtE?si=jvVkc44cW4k4T6nb" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
             </div>
             <div class="quiz-container">
                 <h3>Test Your Knowledge</h3>
