--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <h1 class="text-4xl font-bold text-green-600">Aavaran</h1>
             <ul class="hidden md:flex space-x-6">
-                <li><a href="#" class="text-green-700 hover:text-green-500 transition duration-300">Products</a></li>
-                <li><a href="#" class="text-green-700 hover:text-green-500 transition duration-300">Alternatives</a>
+                <li><a href="product.html" class="text-green-700 hover:text-green-500 transition duration-300">Products</a></li>
+                <li><a href="alternatives.html" class="text-green-700 hover:text-green-500 transition duration-300">Alternatives</a>
                 </li>
                 <li><a href="#" class="text-green-700 hover:text-green-500 transition duration-300">Blog</a></li>
                 <li><a href="#" class="text-green-700 hover:text-green-500 transition duration-300">Community</a></li>
