--- a/index.html
+++ b/index.html
@@ -298,11 +298,11 @@
                 <h3 class="text-3xl font-bold mb-4 text-white" data-aos="fade-up">Ready to Make a Difference?</h3>
                 <p class="text-xl mb-8 text-green-100" data-aos="fade-up" data-aos-delay="200">Join our community and
                     start your sustainable journey today.</p>
-                <button
+                <a href="register.html"<button
                     class="bg-white text-green-600 px-6 py-3 rounded-full text-lg font-semibold hover:bg-green-100 transition duration-300"
                     data-aos="zoom-in" data-aos-delay="400">
                     Sign Up Now
-                </button>
+                </button></a>
             </div>
             <div class="absolute top-0 left-0 w-full h-full">
                 <svg class="w-full h-full" viewBox="0 0 1440 320" fill="none" xmlns="http://www.w3.org/2000/svg">
