--- a/alternatives.html
+++ b/alternatives.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alternatives | Aavaran</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -264,10 +264,12 @@
                 <a href="index.html">Aavaran</a>
             </div>
             <ul class="nav-links">
-                <li><a href="index.html">Products</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="product.html">Products</a></li>
                 <li><a href="alternatives.html">Alternatives</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="community.html">Community</a></li>
+                <li><a href="register.html">My Account</a></li>
             </ul>
         </nav>
     </header>
@@ -312,7 +314,7 @@
     <div class="footer-container">
         <h2>Ready to Make a Difference?</h2>
         <p>Join our community and start your sustainable journey today.</p>
-        <a href="#" class="button">Sign Up Now</a>
+        <a href="register.html" class="button">Sign Up Now</a>
     </div>
 
     <footer class="footer">
@@ -323,10 +325,10 @@
         <div class="column">
             <h3>Quick Links</h3>
             <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
         <div class="column">
