--- a/index.html
+++ b/index.html
@@ -157,11 +157,13 @@
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
             <h1 class="text-4xl font-bold text-green-600">Aavaran</h1>
             <ul class="hidden md:flex space-x-6">
+                <li><a href="index.html" class="text-green-700 hover:text-green-500 transition duration-300">Home</a></li>
                 <li><a href="product.html" class="text-green-700 hover:text-green-500 transition duration-300">Products</a></li>
                 <li><a href="alternatives.html" class="text-green-700 hover:text-green-500 transition duration-300">Alternatives</a>
                 </li>
-                <li><a href="#" class="text-green-700 hover:text-green-500 transition duration-300">Blog</a></li>
-                <li><a href="#" class="text-green-700 hover:text-green-500 transition duration-300">Community</a></li>
+                <li><a href="blog.html" class="text-green-700 hover:text-green-500 transition duration-300">Blog</a></li>
+                <li><a href="community.html" class="text-green-700 hover:text-green-500 transition duration-300">Community</a></li>
+                <li><a href="register.html" class="text-green-700 hover:text-green-500 transition duration-300">My Account</a></li>
             </ul>
             <button class="md:hidden text-green-600" id="mobile-menu-button">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
@@ -172,10 +174,12 @@
             </button>
         </nav>
         <div class="md:hidden hidden" id="mobile-menu">
-            <a href="#" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Products</a>
-            <a href="#" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Alternatives</a>
-            <a href="#" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Blog</a>
-            <a href="#" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Community</a>
+            <a href="index.html" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Home</a>
+            <a href="product.html" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Products</a>
+            <a href="alternatives.html" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Alternatives</a>
+            <a href="blog.html" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Blog</a>
+            <a href="community.html" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">Community</a>
+            <a href="register.html" class="block py-2 px-4 text-sm text-green-700 hover:bg-green-100">My Account</a>
         </div>
     </header>
 
@@ -235,8 +239,9 @@
                 </div>
                 <button
                     class="bg-white text-green-600 px-6 py-3 rounded-full text-lg font-semibold hover:bg-green-100 transition duration-300"
-                    data-aos="zoom-in" data-aos-delay="1000">
+                    data-aos="zoom-in" data-aos-delay="1000"><a href="register.html">
                     Join the Challenge
+                </a>
                 </button>
             </div>
             <div class="absolute top-0 left-0 w-full h-full">
@@ -324,10 +329,10 @@
                 <div class="w-full md:w-1/4 mb-6 md:mb-0">
                     <h5 class="text-xl font-semibold mb-4">Quick Links</h5>
                     <ul>
-                        <li><a href="#" class="hover:text-green-300 transition duration-300">About Us</a></li>
-                        <li><a href="#" class="hover:text-green-300 transition duration-300">Products</a></li>
-                        <li><a href="#" class="hover:text-green-300 transition duration-300">Blog</a></li>
-                        <li><a href="#" class="hover:text-green-300 transition duration-300">Contact</a></li>
+                        <li><a href="about.html" class="hover:text-green-300 transition duration-300">About Us</a></li>
+                        <li><a href="product.html" class="hover:text-green-300 transition duration-300">Products</a></li>
+                        <li><a href="blog.html" class="hover:text-green-300 transition duration-300">Blog</a></li>
+                        <li><a href="contact.html" class="hover:text-green-300 transition duration-300">Contact</a></li>
                     </ul>
                 </div>
                 <div class="w-full md:w-1/4 mb-6 md:mb-0">
