--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aavaran - Sustainable Products</title>
+    <title>Products | Aavaran</title>
     <style>
         /* Reset and base styles */
         * {
@@ -43,52 +43,58 @@
             margin: 0 auto;
             padding: 0 20px;
         }
-
-        /* Header styles */
-        header {
-            background-color: var(--primary-color);
-            color: white;
-            padding: 1rem 0;
-            position: sticky;
-            top: 0;
-            z-index: 1000;
+        /* Reset some default browser styles */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
-        nav {
+        /* Header styles */
+        .site-header {
+            background-color: #ffffff;
+            padding: 20px 50px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .navbar {
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
 
-        .logo {
-            font-size: 1.5rem;
+        .logo a {
+            font-family: 'Arial', sans-serif;
+            color: #00796b;
+            /* Matching the green tone from the image */
+            text-decoration: none;
+            font-size: 2em;
             font-weight: bold;
-            color: white;
-            text-decoration: none;
-            transition: color 0.3s;
         }
 
-        .logo:hover {
-            color: var(--accent-color);
-        }
-
-        nav ul {
-            list-style-type: none;
+        .nav-links {
+            list-style: none;
             display: flex;
+            gap: 30px;
         }
 
-        nav ul li {
-            margin-left: 20px;
+        .nav-links li {
+            display: inline-block;
         }
 
-        nav ul li a {
-            color: white;
+        .nav-links a {
+            color: #00796b;
+            /* Matching the green tone from the image */
             text-decoration: none;
-            transition: color 0.3s;
+            font-size: 1.1em;
+            padding: 10px 20px;
+            transition: background 0.3s ease;
         }
 
-        nav ul li a:hover {
-            color: var(--accent-color);
+        .nav-links a:hover,
+        .nav-links .active {
+            background-color: #e0f2f1;
+            border-radius: 20px;
         }
 
         /* Hero Section */
@@ -414,25 +420,26 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <nav>
-                <a href="#" class="logo">Aavaran</a>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                <button class="dark-mode-toggle" id="darkModeToggle">🌓</button>
-            </nav>
-        </div>
+    <header class="site-header">
+        <nav class="navbar">
+            <div class="logo">
+                <a href="index.html">Aavaran</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="product.html">Products</a></li>
+                <li><a href="alternatives.html">Alternatives</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="community.html">Community</a></li>
+                <li><a href="register.html">My Account</a></li>
+            </ul>
+        </nav>
     </header>
     <section class="hero">
         <div class="hero-content">
             <h1>Sustainable Living Starts Here</h1>
             <p>Discover eco-friendly products that make a difference for you and the planet</p>
-            <a href="#products" class="cta-button">Shop Now</a>
+            <a href="register.html" class="cta-button">Shop Now</a>
         </div>
     </section>
 
