--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aavaran - Sign In / Register</title>
+    <title>Register / Sign In | Aavaran</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
@@ -210,10 +210,12 @@
     <nav class="navbar">
         <a href="#" class="navbar-brand">Aavaran</a>
         <div class="navbar-links">
-            <a href="index.html">Products</a>
-            <a href="#">Alternatives</a>
-            <a href="#">Blog</a>
-            <a href="#">Community</a>
+            <a href="index.html">Home</a>
+            <a href="product.html">Products</a>
+            <a href="alternatives.html">Alternatives</a>
+            <a href="blog.html">Blog</a>
+            <a href="community.html">Community</a>
+            <a href="register.html">My Account</a>
         </div>
     </nav>
 
