--- a/toothbrush.html
+++ b/toothbrush.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bamboo Toothbrush - Aavaran</title>
+    <title>Aavaran | Bamboo Toothbrush</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
@@ -54,6 +54,10 @@
 
         .logo:hover {
             transform: scale(1.05);
+        }
+
+        .nav-links ul {
+            display: flex;
         }
 
         .nav-links a {
@@ -395,10 +399,14 @@
         <nav class="container">
             <div class="logo">Aavaran</div>
             <div class="nav-links">
-                <a href="#">Products</a>
-                <a href="#">Alternatives</a>
-                <a href="#">Blog</a>
-                <a href="#">Community</a>
+                <ul type="none">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="product.html">Products</a></li>
+                    <li><a href="alternatives.html">Alternatives</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="community.html">Community</a></li>
+                    <li><a href="register.html">My Account</a></li>
+                </ul>
             </div>
         </nav>
     </header>
