--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products | Aavaran</title>
+    <title>Aavaran - Sustainable Products</title>
     <style>
         /* Reset and base styles */
         * {
@@ -43,15 +43,8 @@
             margin: 0 auto;
             padding: 0 20px;
         }
-        /* Reset some default browser styles */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
-        /* Header styles */
-        .site-header {
+        .header {
             background-color: #ffffff;
             padding: 20px 50px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -420,7 +413,7 @@
     </style>
 </head>
 <body>
-    <header class="site-header">
+    <header>
         <nav class="navbar">
             <div class="logo">
                 <a href="index.html">Aavaran</a>
@@ -433,13 +426,14 @@
                 <li><a href="community.html">Community</a></li>
                 <li><a href="register.html">My Account</a></li>
             </ul>
+                <button class="dark-mode-toggle" id="darkModeToggle">🌓</button>
         </nav>
     </header>
     <section class="hero">
         <div class="hero-content">
             <h1>Sustainable Living Starts Here</h1>
             <p>Discover eco-friendly products that make a difference for you and the planet</p>
-            <a href="register.html" class="cta-button">Shop Now</a>
+            <a href="#products" class="cta-button">Shop Now</a>
         </div>
     </section>
 
