--- a/product.html
+++ b/product.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aavaran - Sustainable Products</title>
+    <title>Products | Aavaran</title>
     <style>
         /* Reset and base styles */
         * {
@@ -433,7 +433,7 @@
         <div class="hero-content">
             <h1>Sustainable Living Starts Here</h1>
             <p>Discover eco-friendly products that make a difference for you and the planet</p>
-            <a href="#products" class="cta-button">Shop Now</a>
+            <a href="register.html" class="cta-button">Shop Now</a>
         </div>
     </section>
 
