--- a/alternatives.html
+++ b/alternatives.html
@@ -326,7 +326,7 @@
             <h3>Quick Links</h3>
             <ul>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="products.html">Products</a></li>
+                <li><a href="product.html">Products</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
