--- a/product.html
+++ b/product.html
@@ -59,7 +59,6 @@
         .logo a {
             font-family: 'Arial', sans-serif;
             color: #00796b;
-            /* Matching the green tone from the image */
             text-decoration: none;
             font-size: 2em;
             font-weight: bold;
@@ -77,7 +76,6 @@
 
         .nav-links a {
             color: #00796b;
-            /* Matching the green tone from the image */
             text-decoration: none;
             font-size: 1.1em;
             padding: 10px 20px;
@@ -88,6 +86,16 @@
         .nav-links .active {
             background-color: #e0f2f1;
             border-radius: 20px;
+        }
+
+        /* Hamburger menu styles */
+        .hamburger {
+            display: none;
+            cursor: pointer;
+            background: none;
+            margin-left: auto;
+            border: none;
+            font-size: 1.5rem;
         }
 
         /* Hero Section */
@@ -379,12 +387,51 @@
 
         /* Responsive styles */
         @media (max-width: 768px) {
+            .header {
+                padding: 20px;
+            }
+
+            .hamburger {
+                display: block;
+            }
+
+            .nav-links {
+                display: none;
+                flex-direction: column;
+                position: absolute;
+                top: 80px;
+                left: 0;
+                width: 100%;
+                background-color: #ffffff;
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+                z-index: 1000;
+            }
+
+            .nav-links.show {
+                display: flex;
+            }
+
+            .nav-links li {
+                width: 100%;
+                text-align: center;
+            }
+
+            .nav-links a {
+                display: block;
+                padding: 15px;
+            }
+
             .products {
                 grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             }
 
             .hero {
-                height: 300px;
+                height: auto;
+                min-height: 300px;
+            }
+
+            .hero-content {
+                padding: 2rem 1rem;
             }
 
             .hero h1 {
@@ -409,6 +456,33 @@
                 flex-wrap: wrap;
                 justify-content: center;
             }
+
+            .filter-btn {
+                margin-bottom: 0.5rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .hero h1 {
+                font-size: 1.5rem;
+            }
+
+            .hero p {
+                font-size: 0.9rem;
+            }
+
+            .cta-button {
+                padding: 0.8rem 1.5rem;
+                font-size: 0.9rem;
+            }
+
+            .section-title {
+                font-size: 2rem;
+            }
+
+            .product-card {
+                width: 100%;
+            }
         }
     </style>
 </head>
@@ -418,7 +492,8 @@
             <div class="logo">
                 <a href="index.html">Aavaran</a>
             </div>
-            <ul class="nav-links">
+            <button class="hamburger" id="hamburger">☰</button>
+            <ul class="nav-links" id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="product.html">Products</a></li>
                 <li><a href="alternatives.html">Alternatives</a></li>
@@ -426,7 +501,7 @@
                 <li><a href="community.html">Community</a></li>
                 <li><a href="register.html">My Account</a></li>
             </ul>
-                <button class="dark-mode-toggle" id="darkModeToggle">🌓</button>
+            <button class="dark-mode-toggle" id="darkModeToggle">🌓</button>
         </nav>
     </header>
     <section class="hero">
@@ -441,8 +516,7 @@
         New Arrivals: Check out our latest sustainable products!
     </div>
 
-    <main class="container">
-        <h2 class="section-title">Our Sustainable Products</h2>
+    <h2 class="section-title">Our Sustainable Products</h2>
         
         <div class="search-filter">
             <div class="search-bar">
@@ -562,6 +636,8 @@
         const dynamicBanner = document.getElementById('dynamicBanner');
         const searchInput = document.getElementById('searchInput');
         const searchButton = document.getElementById('searchButton');
+        const hamburger = document.getElementById('hamburger');
+        const navLinks = document.getElementById('nav-links');
 
         function createProductCard(product) {
             const card = document.createElement('div');
@@ -669,6 +745,18 @@
         document.addEventListener('click', (e) => {
             if (e.target.classList.contains('add-to-cart')) {
                 alert('Product added to cart!');
+            }
+        });
+
+        // Hamburger menu functionality
+        hamburger.addEventListener('click', () => {
+            navLinks.classList.toggle('show');
+        });
+
+        // Close menu when clicking outside
+        document.addEventListener('click', (e) => {
+            if (!e.target.closest('.navbar')) {
+                navLinks.classList.remove('show');
             }
         });
 
